--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ci:publish": "pnpm publish -r"
+    "ci:publish": "changeset publish"
   },
   "repository": {
     "type": "git",
