--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lexmin0412/eslint-config-typescript",
   "version": "0.0.1",
-  "description": "",
+  "description": "eslint typescript 配置",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
