--- a/packages/eslint-config-vue/package.json
+++ b/packages/eslint-config-vue/package.json
@@ -20,6 +20,7 @@
   },
   "license": "ISC",
   "dependencies": {
-    "eslint-plugin-vue": "^9.9.0"
+    "eslint-plugin-vue": "^9.9.0",
+    "@lexmin0412/eslint-config-vanilla": "workspace:*"
   }
 }
