--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
 		"changelog": "pnpm changeset add",
-		"version": "pnpm changeset version",
+		"ci:version": "pnpm changeset version",
     "ci:publish": "changeset publish"
   },
   "repository": {
