--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@lexmin0412/linter",
   "version": "0.0.1",
+	"private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
