--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": true,
-  "fixed": [["eslint-*", "prettier-*", "stylelint-*"]],
+  "fixed": [["@lexmin0412/*"]],
   "linked": [],
   "access": "public",
   "baseBranch": "main",
