--- a/packages/commitlint-plugin-standard/package.json
+++ b/packages/commitlint-plugin-standard/package.json
@@ -7,6 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "files": [
+    "package.json",
+    "pnpm-lock.yaml",
+    "index.js"
+  ],
   "author": "lexmin0412 <zhangle_dev@outlook.com>",
   "license": "ISC",
   "dependencies": {
