--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
 		"changelog": "pnpm changeset add",
-		"ci:version": "pnpm changeset version",
+		"ci:version": "pnpm changeset version --yes",
     "ci:publish": "changeset publish"
   },
   "repository": {
