--- a/packages/prettier-config-base/config.json
+++ b/packages/prettier-config-base/config.json
@@ -1,4 +1,5 @@
 {
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "printWidth": 100,
   "useTabs": true,
   "tabWidth": 2,
@@ -15,5 +16,9 @@
   "vueIndentScriptAndStyle": false,
   "endOfLine": "lf",
   "embeddedLanguageFormatting": "auto",
-  "singleAttributePerLine": true
+  "singleAttributePerLine": true,
+  "importOrder": ["<THIRD_PARTY_MODULES>", "^src/(.*)$", "^@/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "importOrderCaseInsensitive": true
 }
