--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -20,13 +20,14 @@ jobs:
         with:
           node-version: 18
       - name: install pnpm
-        run: npm i pnpm@latest -g
+        run: npm i pnpm@8.x -g
       - name: Setup npmrc
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
       - name: setup pnpm config
         run: pnpm config set store-dir $PNPM_CACHE_FOLDER
       - name: install dependencies
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
+
       - name: create and publish versions
         uses: changesets/action@v1
         with:
