chore(prettier-config-base): 补充缺失的依赖

--- a/packages/prettier-config-base/package.json
+++ b/packages/prettier-config-base/package.json
@@ -18,5 +18,8 @@
     "access": "public",
     "tag": "latest"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0"
+  }
 }
